perf: Upgrade springboot version to 3+ and jdk version to 21