@@ -7,12 +7,12 @@ COPY . .
 RUN mvn clean package -DskipTests \
     && cp target/oci-helper-*.jar /app/oci-helper.jar
 
-FROM eclipse-temurin:17-jre-jammy
+FROM eclipse-temurin:21-jre-jammy
 
 ENV LANG=zh_CN.UTF-8 \
     LC_ALL=zh_CN.UTF-8 \
     TZ=Asia/Shanghai \
-    OCI_HELPER_VERSION=2.0.5
+    OCI_HELPER_VERSION=3.0.0
 
 RUN apt update && apt install -y openssh-client lsof curl && \
     mkdir -p /root/.ssh && \
@@ -28,7 +28,4 @@ COPY --from=builder /app/oci-helper.jar .
 
 EXPOSE 8818
 
-CMD exec java \
-    --add-opens java.base/java.net=ALL-UNNAMED \
-    --add-opens java.base/sun.net.www.protocol.https=ALL-UNNAMED \
-    -jar oci-helper.jar | tee -a /var/log/oci-helper.log
+CMD exec java -jar oci-helper.jar | tee -a /var/log/oci-helper.log
